--- a/info.yml
+++ b/info.yml
@@ -26,5 +26,5 @@ description: "Tank Integration in 3ds Max"
 
 # Required minimum versions for this item to run
 requires_shotgun_version:
-requires_core_verson: "v0.10.0"
+requires_core_version: "v0.10.0"
 
