#21758 - cosmetic changes to remove Tank from UI

--- a/info.yml
+++ b/info.yml
@@ -18,7 +18,7 @@ requires_shotgun_fields:
 
 # More verbose description of this item 
 display_name: "3ds Max Engine"
-description: "Tank Integration in 3ds Max"
+description: "Shotgun Integration in 3ds Max"
 
 # Required minimum versions for this item to run
 requires_shotgun_version:
