Update the engine display name.

--- a/info.yml
+++ b/info.yml
@@ -23,7 +23,7 @@ configuration:
 requires_shotgun_fields:
 
 # More verbose description of this item 
-display_name: "3ds Max Engine"
+display_name: "Shotgun Engine for 3ds Max"
 description: "Shotgun Integration in 3ds Max"
 
 # Required minimum versions for this item to run
