--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,4 @@
-# Copyright (c) 2013 Shotgun Software Inc.
+# Copyright (c) 2019 Shotgun Software Inc.
 #
 # CONFIDENTIAL AND PROPRIETARY
 #
@@ -7,5 +7,14 @@
 # By accessing, using, copying or modifying this work you indicate your
 # agreement to the Shotgun Pipeline Toolkit Source Code License. All rights
 # not expressly granted therein are reserved by Shotgun Software Inc.
+#
+# coverage configuration - used by https://coveralls.io/ integration
+#
+#
+[run]
+source=.
+omit=tests/*
 
-from . import tk_3dsmax
+[report]
+exclude_lines =
+    raise NotImplementedError
