--- a/info.yml
+++ b/info.yml
@@ -54,6 +54,7 @@ configuration:
                         it isn't yet fully supported and tested with Toolkit.  To disable the warning
                         dialog for the version you are testing, it is recomended that you set this
                         value to the current major version + 1."
+        default_value: 2026
 
     launch_builtin_plugins:
         type: list
